# ApprovalTests.cpp.Demos

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt
.github/workflows/: github_actions_build.yml
.github/workflows/setup-conan/: action.yml
CMake/: Conan.cmake  WarningsAsErrors.cmake
catch2_demo/: CMakeLists.txt  DisposableExplanation.cpp  Test01.cpp  Test02.cpp  Test03CustomReporters.cpp  Test04ConsoleReporter.cpp  Test05VerifyAll.cpp  Test06VerifyAllCombinations.cpp  Test07TestScenarios.cpp  Test08Factorial.cpp  main.cpp
demos/: CMakeLists.txt
demos/catch1_demo/: CMakeLists.txt
demos/catch2_demo/: CMakeLists.txt  DisposableExplanation.cpp  Test02.cpp  Test03CustomReporters.cpp  Test04ConsoleReporter.cpp  Test07TestScenarios.cpp
demos/doctest_demo/: CMakeLists.txt
demos/google_test_demo/: CMakeLists.txt  Test04ConsoleReporter.cpp  Test05VerifyAll.cpp  Test07TestScenarios.cpp
dependencies/: CMakeLists.txt
doctest_demo/: CMakeLists.txt  Test01.cpp  Test02.cpp  Test03CustomReporters.cpp  Test04ConsoleReporter.cpp  Test05VerifyAll.cpp  Test06VerifyAllCombinations.cpp  Test07TestScenarios.cpp  Test08Factorial.cpp  main.cpp
doctest_demo/approval_tests/: Test07TestScenarios.Deal_with_dates_and_times_in_output_with_scrubber.approved.txt
google_test_demo/: CMakeLists.txt  Test01.cpp  Test02.cpp  Test03CustomReporters.cpp  Test04ConsoleReporter.cpp  Test05VerifyAll.cpp  Test06VerifyAllCombinations.cpp  Test07TestScenarios.cpp  Test08Factorial.cpp  main.cpp
google_test_demo/approval_tests/: Test07TestScenarios.Deal_with_dates_and_times_in_output_with_scrubber.approved.txt  Test08Factorial.FactorialsUpTo10.approved.txt
include/: DateRemovingLogFileWriter.h  FibonacciCalculator.h
specific_examples/: CMakeLists.txt  README.md
specific_examples/2019_10_07_reddit_custom_file/: CMakeLists.txt  FakeCustomFile.cpp  FakeCustomFile.h  FileHeaderTests-ApprovalTestsV1.cpp  FileHeaderTests-ApprovalTestsV2.cpp  FileHeaderTests-ApprovalTestsV3.cpp  FileHeaderTests-Catch.cpp  FileHeaderTests.cpp  README.md  main.cpp
specific_examples/2019_10_07_reddit_custom_file/approval_tests/: FileHeaderTests-ApprovalTestsV3.header_fields_are_correct_-_with_function_to_test_headers.approved.txt  FileHeaderTests.header_fields_are_correct_-_with_Approval_Tests_2.approved.txt
specific_examples/2019_11_18_fuzzing_gilded_rose/: CMakeLists.txt  DemoSteps.md  GildedRose.cc  GildedRose.h  GildedRoseApprovalTests.cc  README.md
specific_examples/2020_04_08_conditional_customisations/: CMakeLists.txt  main.cpp
specific_examples/2020_04_08_reusing_main_customisations/: CMakeLists.txt  OurApprovalTestCustomisations.cpp  OurApprovalTestCustomisations.h  README.md  SampleTest.cpp  main.cpp
